# multiplexer-manager

./: .gitignore  README.md  example.txt  multiplexer-of-madness.py  pyproject.toml  setup.py
src/multiplexer-manager/: __init__.py
src/multiplexermanager/: CV.py  FETs.py  GUI.py  __init__.py  fileopener.py  multiplexermanager.py  operations.py  plotting.py
src/multiplexermanager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
