[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "multiplexer-manager"
version = "1.0.2"
authors = [
  { name="Steven Linfield", email="S.Linfield@outlook.com" },
]
description = "A package for opening and processing multiplexer files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["electrochemistry", "multiplexer"]
[project.urls]
"Homepage" = "https://github.com/MoonshinetheP/multiplexer-manager"
"Bug Tracker" = "https://github.com/MoonshinetheP/multiplexer-manager/issues"